--- a/client/src/scss/delivery.scss
+++ b/client/src/scss/delivery.scss
@@ -1,6 +1,3 @@
-@import 'variables';
-@import 'mixins';
-
 .deliveryContainer {
     @include display-flex(row, space-around, flex-start);
     margin-top: 2rem;
@@ -109,4 +106,27 @@
 button {
     @include button;
     margin-top: 2rem;
+}
+
+@include response(l) {
+}
+
+@include response(m) {
+}
+
+@include response(s) {
+    .deliveryContainer {
+        @include display-flex(column, space-around, flex-start);
+
+        .deliveryInfoCardContainer {
+            min-width: 100%;
+
+            .deliveryInfoCard {
+                @include WL(max, 100%);
+            }
+        }
+        .deliveryInfoForm {
+            @include WL(max, 100%);
+        }
+    }
 }
